# fleeting

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: arch.rs  cli.rs  command_ext.rs  docker_context.rs  docker_releases.rs  docker_tls.rs  eventually.rs  install_docker.sh  lib.rs  logging.rs  main.rs  prepare_certs.sh  shutdown.rs  ssh.rs  steps.rs  user_data_template.sh  worker.rs
src/vm_providers/: ec2.rs  gce.rs  mod.rs  multipass.rs
