[package]
name = "fleeting"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
clap = { version = "4.5.15", features = ["derive"] }
russh = "0.44.0"
tokio = { version = "1.39.2", features = ["io-std"] } 
log = "0.4.22"
env_logger = "0.11.5"
aws-config = "1.5.5"
aws-sdk-ec2 = "1.65.0"
maplit = "1.0.2"
base64 = "0.22.1"
futures = "0.3.30"
indoc = "2.0.5"
rand = "0.8.5"
color-print = "0.3.6"
serde_json = "1.0.125"
sha2 = "0.10.8"
hex = "0.4.3"
