[package]
name = "fleeting"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
aws-config = "1.5.5"
aws-sdk-ec2 = "1.65.0"
aws-sdk-sts = "1.39.0"
base64 = "0.22.1"
clap = { version = "4.5.15", features = ["derive"] }
color-print = "0.3.6"
either = "1.13.0"
env_logger = "0.11.5"
futures = "0.3.30"
hex = "0.4.3"
log = "0.4.22"
maplit = "1.0.2"
rand = "0.8.5"
russh = "0.44.0"
serde_json = "1.0.125"
sha2 = "0.10.8"
tokio = { version = "1.39.2", features = ["io-std", "signal"] } 
