[package]
name = "fleeting"
version = "0.1.0"
edition = "2021"
default-run = "fleeting"

[dependencies]
ansi-to-html = "0.2.1"
anyhow = "1.0.86"
async-trait = "0.1.81"
aws-config = "1.5.5"
aws-sdk-ec2 = "1.65.0"
aws-sdk-sts = "1.39.0"
base64 = "0.22.1"
clap = { version = "4.5.15", features = ["derive", "wrap_help"] }
color-print = "0.3.6"
dirs = "5.0.1"
either = "1.13.0"
futures = "0.3.30"
glob = "0.3.1"
hex = "0.4.3"
indoc = "2.0.5"
log = { version = "0.4.22", features = ["std"] }
maplit = "1.0.2"
rand = "0.8.5"
rcgen = "0.13.1"
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls"] }
russh = "0.44.0"
scraper = "0.20.0"
semver = "1.0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.125"
sha2 = "0.10.8"
sysinfo = "0.31.4"
tokio = { version = "1.39.2", features = ["io-std", "signal"] } 
